esphome-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: esphome
  template:
    metadata:
      labels:
        app: esphome
    spec:
      containers:
      - name: esphome
        image: esphome/esphome:latest
        ports:
        - containerPort: 6052
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /etc/localtime
          name: localtime
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: esphome-config
      - name: localtime
        hostPath:
          path: /etc/localtime:ro
