z2m-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: z2m
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: z2m
  template:
    metadata:
      labels:
        app: z2m
    spec:
      # nodeSelector:
      #   kubernetes.io/hostname: raspberry-finn
      containers:
      - name: z2m
        image: koenkk/zigbee2mqtt:latest
        securityContext:
          privileged: true
        ports:
          - containerPort: 8080
        volumeMounts:
          - name: z2m-data
            mountPath: /app/data
          - name: z2m-udev
            mountPath: /run/udev
          - name: ttyacm
            mountPath: /dev/ttyACM0
      volumes:
        - name: z2m-data
          persistentVolumeClaim:
            claimName: z2m-data
        - name: z2m-udev
          hostPath:
            path: /run/udev
        - name: ttyacm
          hostPath:
            path: /dev/ttyACM0
