all-services.yml
## Homeassistant Service ###
apiVersion: v1
kind: Service
metadata:
  name: haas-service
  namespace: homeassistant
  annotations:
    metallb.universe.tf/allow-shared-ip: "haas-shared-ip"
spec:
  selector:
    app: haas
  ports:
  - name: homeassistant
    port: 8123
    targetPort: 8123
  type: LoadBalancer
  loadBalancerIP: 10.100.99.89

## MQTT Service ###
---
apiVersion: v1
kind: Service
metadata:
  name: mqtt-service
  namespace: homeassistant
  annotations:
    metallb.universe.tf/allow-shared-ip: "haas-shared-ip"
spec:
  selector:
    app: mqtt1883
  ports:
  - name: mqtt
    port: 1883
    targetPort: 1883
  -
  type: LoadBalancer
  loadBalancerIP: 10.100.99.89

## Zigbee2MQTT Service ###
---
apiVersion: v1
kind: Service
metadata:
  name: z2m-service
  namespace: homeassistant
  annotations:
    metallb.universe.tf/allow-shared-ip: "haas-shared-ip"
spec:
  selector:
    app: z2m
  ports:
  - name: homeassistant
    port: 8080
    targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: 10.100.99.89
