esphome-service.yml
## Zigbee2MQTT Service ###
apiVersion: v1
kind: Service
metadata:
  name: esphome-service
  namespace: homeassistant
  annotations:
    metallb.universe.tf/allow-shared-ip: "haas-shared-ip"
spec:
  selector:
    app: esphome
  ports:
  - name: esphome
    port: 6052
    targetPort: 6052
  type: LoadBalancer
  loadBalancerIP: 10.100.99.89
