ha-service.yml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-service
  namespace: homeassistant
spec:
  selector:
    app: homeassistant-label
  type: LoadBalancer
  loadBalancerIP: 10.100.99.89
  ports:
  - name: homeassistant
    port: 8123
    targetPort: 8123
