mqtt-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mqtt-ingress
  namespace: homeassistant
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mqtt.homeassistant.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mosquitto-service
            port:
              number: 1883
