z2m-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: z2m-ingress
  namespace: homeassistant
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: z2m.homeassistant.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: z2m-service
            port:
              number: 8080
